codex-rs/tui/src/bottom_pane/mentions_v2/snapshots/codex_tui__bottom_pane__mentions_v2__render__tests__bounded_filesystem_columns_wide.snap
---
source: tui/src/bottom_pane/mentions_v2/render_tests.rs
expression: text(&buffer)
---
› 界.rs                               src/                                File
  界.rs                               tests/                              File
  a_very_long_filename_that_exceeds…  deep/                               File
